pxc/tests/test_28_auto/typeinf5.px

namespace typeinf5;
import common -;

function int foo(int x)
{
  vector{int} v;
  v.resize(5, int());
  var& y = v[3];
  y += 1;
  y += x;
  v.resize(10, int()); // error
  return v[3];
}

exception::common::set_stack_trace_limit(0);
println(foo(3));

